--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,39 @@ body * {
     padding-bottom: 20px;
     padding-top: 60px;
 }
-    
+
+.hero img {
+
+}
+.hero h1 {
+    display: inline-block;
+    width: 100%;
+    font-size: 70px;
+    text-transform: uppercase;
+
+}
+
+.hero p {
+    display: inline-block;
+    width: 100%;
+
+}
+
+.hero .clock {
+    display: inline-block;
+    width: 100%;
+
+}
+
+.hero form {
+    display: inline-block;
+    width: 90%;
+}
+
+.hero .mouse {
+    display: inline-block;
+}
+
 .main-content {
     display: inline-block;
     width: 100%;
@@ -34,13 +66,13 @@ footer {
 .small-container {
     display: inline-block;
     width: 700px;
-    margin-left: calc( (100% - 700px) / 2);
-    background-color: red;
+    margin: 0 calc( (100% - 700px) / 2);
+
 }
 .container {
     display: inline-block;
     width: 1200px;
-    margin-left: calc( (100% - 1200px) / 2);
+    margin: 0 calc( (100% - 1200px) / 2);
 }
     .container > .left {
         display: inline-block;
@@ -60,14 +92,14 @@ footer {
 @media (max-width: 1300px) {
     .container {
         width: 900px;
-        margin-left: calc( (100% - 900px) / 2);
+        margin: 0 calc( (100% - 900px) / 2);
     }
 }
 
 @media (max-width: 1000px) {
     .container {
         width: 700px;
-        margin-left: calc( (100% - 700px) / 2);
+        margin: 0 calc( (100% - 700px) / 2);
     }
 
     .container > .left {
@@ -84,12 +116,12 @@ footer {
 @media (max-width: 800px) {
     .small-container {
         width: 500px;
-        margin-left: calc( (100% - 500px) / 2);
+        margin: 0 calc( (100% - 500px) / 2);
         background-color: lime;
     }
     .container {
         width: 500px;
-        margin-left: calc( (100% - 500px) / 2);
+        margin: 0 calc( (100% - 500px) / 2);
     }
 }
 
