--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,25 @@ footer {
     background-color: #03A9F5;
     padding-bottom: 60px;
     padding-top: 20px;
+    text-align: center;
 }
+
+    footer .fa {
+        display: inline-block;
+        width: 40px;
+        
+        font-size: 20px;
+        line-height: 20px;
+        padding: 10px;
+        margin: 10px;
+        color: #fff;
+        text-decoration: none;
+    }
+    footer .fa:hover {
+        background-color: red;
+        color: #fff;
+        border-radius: 50%;
+    }
 
 .small-container {
     display: inline-block;
