--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,11 @@ footer {
     padding-bottom: 60px;
     padding-top: 20px;
     text-align: center;
+    color: #fff;
+}
+footer >.container:nth-child(1) {
+    border-bottom: 1px solid #fff;
+    margin-bottom: 20px;
 }
 
     footer .fa {
@@ -103,15 +108,35 @@ footer {
         line-height: 20px;
         padding: 10px;
         margin: 10px;
-        color: #fff;
+        color: #eee;
         text-decoration: none;
     }
     footer .fa:hover {
         background-color: red;
-        color: #fff;
+        color: #eee;
         border-radius: 50%;
     }
+footer img {
+    display: inline-block;
 
+}
+    footer .info > div {
+        display: inline-block;
+    }
+        footer .info > div:nth-child(2) {
+            padding: 0 15px;
+            margin-left: 15px;
+            margin-right: 15px;
+            border-left: 1px solid #eee;
+            border-right: 1px solid #eee;
+        }
+        footer p {
+            display: inline-block;
+            width: 60%;
+        }
+        footer a {
+            color: #eee;
+        }
 .small-container {
     display: inline-block;
     width: 700px;
@@ -171,6 +196,13 @@ footer {
     .container {
         width: 500px;
         margin: 0 calc( (100% - 500px) / 2);
+    }
+    footer .info > div {
+        width: 100%;
+    }
+    footer .info > div:nth-child(2) {
+        border: none;
+
     }
 }
 
