--- a/css/progress-bar.css
+++ b/css/progress-bar.css
@@ -6,28 +6,35 @@
     .progress-bar > .texts {
         display: inline-block;
         width: 100%;
-
     }
         .progress-bar > .texts > .title {
             display: inline-block;
             width: 100%;
-            
         }
-        .progress-bar > .texts > .value {
+        .progress-bar > .texts > .value > .loading {
             display: inline-block;
             width: 100%;
-            
         }
-        .progress-bar > .bar {
-            display: inline-block;
-            width: 100%;
-            height: 6px;
-            background-color: #fff;
-            
-        }
+    .progress-bar > .bar {
+        display: inline-block;
+        width: 100%;
+        height: 6px;
+        background-color: grey;
+    }
         .progress-bar > .bar > .value {
             display: inline-block;
             background-color: #03A9FP;
             width: 90%;
-            
+
+            animation-name: loading;
+            animation-iteration-count: 1;
+            animation-duration: 2s;
         }
+@keyframes loading {
+    0% {
+        width: 0;
+    }
+    100% {
+        width: 100%;
+    }
+}
