--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body * {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.html {
+    scroll-behavior: smooth;
+}
+
 .hero {
     display: inline-block;
     width: 100%;
@@ -99,6 +103,8 @@ footer {
 footer >.container:nth-child(1) {
     border-bottom: 1px solid #fff;
     margin-bottom: 20px;
+    position: relative;
+
 }
 
     footer .fa {
@@ -111,12 +117,21 @@ footer >.container:nth-child(1) {
         margin: 10px;
         color: #eee;
         text-decoration: none;
+        border-radius: 50%;
     }
     footer .fa:hover {
         background-color: red;
         color: #eee;
-        border-radius: 50%;
     }
+       footer .fa-angle-up  {
+        background-color: red;
+        color: #eee;
+        position: absolute;
+        right: -22px;
+        top: -55px;
+        box-shadow: 0 1px 2px #0008;
+       }
+     
 footer img {
     display: inline-block;
 
@@ -126,10 +141,9 @@ footer img {
     }
         footer .info > div:nth-child(2) {
             padding: 0 15px;
-            margin-left: 15px;
-            margin-right: 15px;
-            border-left: 1px solid #eee;
-            border-right: 1px solid #eee;
+            margin: 0 0 15px 0;
+            border: none;
+           
         }
         footer p {
             display: inline-block;
@@ -216,5 +230,8 @@ footer img {
     .container {
         width: calc(100%-40px);
         margin-left: 0;
+    }
+    footer .fa-angle-up {
+        position: none;
     }
 }
