--- a/css/progress-bar.css
+++ b/css/progress-bar.css
@@ -1,35 +1,42 @@
 .progress-bar {
     display: inline-block;
     width: 100%;
-
 }
     .progress-bar > .texts {
         display: inline-block;
         width: 100%;
+        margin-bottom: 10px;
     }
         .progress-bar > .texts > .title {
             display: inline-block;
-            width: 100%;
+            float: left;
         }
-        .progress-bar > .texts > .value > .loading {
+        .progress-bar > .textx > .value {
             display: inline-block;
-            width: 100%;
+            float: right;
         }
+        
     .progress-bar > .bar {
         display: inline-block;
         width: 100%;
         height: 6px;
-        background-color: grey;
+        background-color: #ececec;
     }
-        .progress-bar > .bar > .value {
+        .progress-bar > .texts > .value {
             display: inline-block;
-            background-color: #03A9FP;
             width: 90%;
-
-            animation-name: loading;
-            animation-iteration-count: 1;
-            animation-duration: 2s;
+            height: 100%;
         }
+            .progress-bar > .bar > .value > .loading {
+                display: inline-block;
+                width: 100%;
+                height: 100%;
+                background-color: #03a9f5;
+                
+                animation-name: loading;
+                animation-iteration-count: 1;
+                animation-duration: 2s;
+            }
 @keyframes loading {
     0% {
         width: 0;
