--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body * {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.html {
+html {
     scroll-behavior: smooth;
 }
 
@@ -47,14 +47,12 @@ body * {
         font-size: 25px;
         line-height: 30px;
         color: grey;
-
     }
 
     .hero .clock {
         display: inline-block;
         width: 100%;
         margin-bottom: 80px;
-        
     }
 
     .hero form {
@@ -81,9 +79,8 @@ body * {
         margin-bottom: 20px;
         font-size: 24px;
         line-height: 30px;
-
     }
-    .main-content p{
+    .main-content p {
         display: inline-block;
         width: 100%;
         margin-bottom: 20px;
@@ -91,11 +88,10 @@ body * {
         line-height: 25px;
     }
         .main-content p > a {
-            color: red;
+            color: #ea1e63;
             text-decoration: none;
         }
     
-
 footer {
     display: inline-block;
     width: 100%;
@@ -105,31 +101,30 @@ footer {
     text-align: center;
     color: #fff;
 }
-footer >.container:nth-child(1) {
-    border-bottom: 1px solid #fff;
-    margin-bottom: 20px;
-    position: relative;
-
-}
+    footer >.container:nth-child(1) {
+        border-bottom: 1px solid #fff;
+        margin-bottom: 20px;
+        position: relative;
+    }
 
     footer .fa {
         display: inline-block;
         width: 40px;
-        
-        font-size: 20px;
-        line-height: 20px;
         padding: 10px;
         margin: 10px;
+        font-size: 20px;
+        line-height: 20px;
         color: #eee;
         text-decoration: none;
         border-radius: 50%;
     }
-    footer .fa:hover {
-        background-color: red;
-        color: #eee;
-    }
+        footer .fa:hover {
+            background-color: #ea1e63;
+            color: #eee;
+            
+        }
        footer .fa-angle-up  {
-        background-color: red;
+        background-color: #ea1e63;
         color: #eee;
         position: absolute;
         right: -22px;
@@ -139,16 +134,18 @@ footer >.container:nth-child(1) {
      
 footer img {
     display: inline-block;
-
+    margin-bottom: 20px;
+    height: 40px;
 }
     footer .info > div {
         display: inline-block;
     }
         footer .info > div:nth-child(2) {
             padding: 0 15px;
-            margin: 0 0 15px 0;
-            border: none;
-           
+            margin-left: 15px;
+            margin-right: 15px;
+            border-left: 1px solid #eee;
+            border-right: 1px solid #eee;
         }
         footer p {
             display: inline-block;
@@ -156,6 +153,7 @@ footer img {
         }
         footer a {
             color: #eee;
+            text-decoration: none;
         }
 .small-container {
     display: inline-block;
@@ -172,7 +170,6 @@ footer img {
         display: inline-block;
         width: 50%;
         float: left;
-        
     }
 
     .container > .right {
@@ -218,8 +215,10 @@ footer img {
     }
     footer .info > div {
         width: 100%;
+        margin-bottom: 10px;
     }
     footer .info > div:nth-child(2) {
+        margin: 0 0 15px 0;
         border: none;
 
     }
@@ -228,14 +227,13 @@ footer img {
 @media (max-width: 600px) {
     .small-container {
         width: calc(100%-40px);
-        margin-left: 0;
-        background-color: lime;
+        margin: 0 20px;
     }
     .container {
         width: calc(100%-40px);
-        margin-left: 0;
+        margin: 0 20px;
     }
     footer .fa-angle-up {
-        position: none;
+        display: none;
     }
 }
